Fixes overlap of sidebar over main content

--- a/TheWorld/wwwroot/css/site.css
+++ b/TheWorld/wwwroot/css/site.css
@@ -2,6 +2,7 @@
 body {
     font-family: sans-serif;
     font-size: 14px;
+    margin: 0;
 }
 
 label {
@@ -23,6 +24,9 @@ input [type=text], input [type=password], textarea {
     background-color: #222;
     color: #eee;
     padding: 8px 5px;
+    position: fixed;
+    bottom: 0;
+    width: 100%;
 }
 
 .headshot {
@@ -51,4 +55,9 @@ input [type=text], input [type=password], textarea {
     width: 250px;
     overflow: hidden;
     left: 0;
+    margin 0;
+}
+
+#wrapper {
+    margin: 0 0 0 250px;
 }
